04-Added processing of log files

--- a/PgProfiler/Shared/NavMenu.razor
+++ b/PgProfiler/Shared/NavMenu.razor
@@ -1,7 +1,8 @@
 ﻿<MudPaper Width="250px" Elevation="0">
     <MudNavMenu Rounded="true" Margin="Margin.Normal" Color="Color.Tertiary" Class="pa-2">
         <MudNavLink Href="/" Icon="@Icons.Filled.QueryBuilder">Запросы</MudNavLink>
-        <MudNavLink Match="NavLinkMatch.Prefix" Href="/file_list" Icon="@Icons.Filled.List">Список лог файлов</MudNavLink>
+        <MudNavLink Match="NavLinkMatch.Prefix" Href="/ParseLogFile" Icon="@Icons.Filled.List">Логи</MudNavLink>
+        <MudNavLink Match="NavLinkMatch.Prefix" Href="/file_list" Icon="@Icons.Filled.List">Логи DB</MudNavLink>
         <MudNavLink Match="NavLinkMatch.Prefix" Href="/settings" Icon="@Icons.Filled.Settings">Настройки</MudNavLink>
         <MudNavLink Match="NavLinkMatch.Prefix" Href="/UploadFilePage" Icon="@Icons.Filled.UploadFile">Загрузить файл</MudNavLink>
     </MudNavMenu>
